--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react": "16.13.1",
     "react-dom": "^17.0.2",
     "react-native": "0.63.4",
-    "react-native-builder-bob": "^",
+    "react-native-builder-bob": "^0.23.2",
     "react-native-svg": "^12.1.0",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
@@ -156,7 +156,7 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.5",
-    "@react-native-aria/overlays": "^0.3.1"
+    "@react-native-aria/overlays": "0.3.3"
   },
   "sideEffects": false
 }
